--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,24 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.8"
 numpy = "^1.23.4"
+yapf = "^0.32.0"
+toml = "^0.10.2"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.yapf]
+based_on_style = "google"
+blank_line_before_module_docstring = true
+column_limit = 120
+
+[tool.yapfignore]
+ignore_patterns = [
+  ".*/**",
+]
+
+[tool.black]
+include = "\\.ipynb"
+line-length = 120
